tests/NormalTests/paczka1/fuzzy1/10323642.err
Error in line 8: 4QwjWBeM A280 8,4
Error in line 9: 4QwjWBeM A5 83,3
Error in line 16: Wf0jZ A280 59,8
Error in line 24: sOE79Z6Fkq A280 83,44
Error in line 30: YrRGeob S884 73,0
Error in line 27: ckKRe2Cm A503 69,4
Error in line 26: A280 A503 96,4
